<resources>

    <string name="app_name">Content Provider Example App</string>
    <string name="menu_settings">Settings</string>

    <string name="add_book">Add a new book</string>
    <string name="book_info">Book Info</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="save_book">Save</string>
    <string name="del_book">Delete</string>
    <string name="choose_genre">Choose genre</string>

    <string-array name="genre_array">
        <item>Novel</item>
        <item>Poetry</item>
        <item>Thriller</item>
        <item>Romance</item>
        <item>Horror</item>
    </string-array>

</resources>